<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_main"
android:layout_width="match_parent"
android:layout_height="128dp"
android:layout_marginTop="8dp" >

   <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/image_small"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:scaleType="fitCenter"
        android:src="@drawable/snowy_peak1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_small"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:textSize="12sp"
        android:text="@string/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView

        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title_note"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_small"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>